--- a/premium-challenge/src/index.css
+++ b/premium-challenge/src/index.css
@@ -10,10 +10,110 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(235, 235, 235);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar {
+  height: 60px;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  background: white;
+  box-shadow: 0 0 7px rgb(199, 199, 199);
+}
+.header {
+  background: #eeeeee;
+}
+.mt-4 {
+  margin-top: 4rem;
+}
+.text-center {
+  text-align: center;
+}
+.p-2 {
+  padding: 1rem;
+}
+.w-full {
+  width: 100%;
+}
+.bg-gray300 {
+  background-color: #e5e5e5;
+  width: 100%;
+  padding: 3rem;
+}
+.whiteCard {
+  background: white;
+  border-radius: 3px;
+  margin: 1rem;
+  text-align: center;
+}
+.sign {
+  color: rgb(236, 236, 236);
+  font-size: small;
+  margin-bottom: 1rem;
+}
+.left {
+  width: 100%;
+}
+.btn {
+  background: none;
+  font-weight: bold;
+  font-size: 1.2rem;
+  padding: 0.7rem 2rem;
+}
+.rounded {
+  border-radius: 200px;
+  background: gray;
+  height: 1.3rem;
+  width: 1.3rem;
+}
+.carsConatiner {
+  padding: 2rem 0;
+}
+.carCard {
+  border-top: 3px solid rgb(185, 185, 185);
+}
+.detailText {
+  font-weight: 500;
+  padding-left: 0.7rem;
+}
+.socials {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem auto;
+}
+.socials a {
+  color: rgb(223, 223, 223);
+  font-size: 1.4rem;
+}
+.each-li {
+  margin: 0 1rem;
+}
+.footer {
+  padding: 2rem 1rem;
+  background-color: rgb(52, 52, 53);
+  color: white;
+}
+.appendix {
+  color: rgb(150, 149, 149);
+  font-size: 0.8rem;
+  padding: 0 1rem;
+  margin-top: 0.6rem;
+}
+@media screen and (max-width: 480px) {
+  .flexDirection {
+    flex-direction: column;
+  }
 }
