--- a/premium-challenge/src/index.css
+++ b/premium-challenge/src/index.css
@@ -22,6 +22,10 @@ code {
   justify-content: space-between;
   align-items: center;
 }
+a {
+  color: orangered;
+  font-weight: 500;
+}
 
 .navbar {
   height: 60px;
@@ -38,6 +42,25 @@ code {
 .mt-4 {
   margin-top: 4rem;
 }
+.mt-1 {
+  margin-top: 1rem;
+}
+.openModal {
+  color: orangered;
+  background: white;
+  font-weight: bold;
+  padding: 0.7rem 0;
+  border-radius: 5px;
+  border: none;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 1rem 0;
+}
+.c-gray {
+  font-size: 2rem;
+  padding: 0 1rem;
+  color: #cfcfcf;
+}
 .text-center {
   text-align: center;
 }
@@ -50,13 +73,14 @@ code {
 .bg-gray300 {
   background-color: #e5e5e5;
   width: 100%;
-  padding: 3rem;
+  padding: 2rem;
 }
 .whiteCard {
   background: white;
   border-radius: 3px;
   margin: 1rem;
   text-align: center;
+  padding: 0.5rem;
 }
 .sign {
   color: rgb(236, 236, 236);
@@ -74,8 +98,10 @@ code {
 }
 .rounded {
   border-radius: 200px;
-  background: gray;
+  background: rgb(197, 197, 197);
   height: 1.3rem;
+  padding: 0.2rem;
+  color: gray;
   width: 1.3rem;
 }
 .carsConatiner {
@@ -88,6 +114,7 @@ code {
   font-weight: 500;
   padding-left: 0.7rem;
 }
+
 .socials {
   list-style: none;
   display: flex;
@@ -112,8 +139,41 @@ code {
   padding: 0 1rem;
   margin-top: 0.6rem;
 }
+.mobOnly {
+  background: white;
+  padding: 1rem 1rem 0 1rem;
+}
+select {
+  padding: 0.6rem;
+  background: rgb(207, 207, 207);
+  border: none;
+  border-radius: 5px;
+}
+.bottomNav {
+  display: none;
+}
 @media screen and (max-width: 480px) {
   .flexDirection {
     flex-direction: column;
+  }
+  .left {
+    background: white;
+  }
+  .whiteCard {
+    margin: 1rem 0.3rem;
+  }
+  .bottomNav {
+    display: flex;
+    background: orangered;
+    color: white;
+    font-size: 1.2rem;
+    position: fixed;
+    font-weight: bolder;
+    text-align: center;
+    bottom: 0;
+    align-items: center;
+    justify-content: left;
+    width: 100%;
+    padding: 1rem;
   }
 }
