Modal before and after icon

--- a/premium-challenge/src/index.css
+++ b/premium-challenge/src/index.css
@@ -166,7 +166,7 @@ a {
   margin: 0 1rem;
 }
 .footer {
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 4rem 1rem;
   background-color: rgb(52, 52, 53);
   color: white;
 }
