--- a/premium-challenge/src/index.css
+++ b/premium-challenge/src/index.css
@@ -129,9 +129,9 @@ a {
 }
 .rounded {
   border-radius: 200px;
-  background: rgb(197, 197, 197);
+  background: #eeeeee;
   height: 1.3rem;
-  padding: 0.3rem 0.5rem;
+  padding: 0.6rem 0.7rem;
   color: gray;
   width: 1.3rem;
   margin-right: 0.5rem;
